--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -37,7 +37,7 @@
 
     a:hover {
         border-bottom: 1px solid;
-        background: var(--clr-primary-200);
+        background: var(--clr-primary-300);
     }
 
     a:active {
