--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,9 +1,17 @@
-.react-tabs__tab {
-    font-size: var(--fs-300);
-    font-family: var(--ff-primary);
-    letter-spacing: 0.05em;
+.main {
+    height: 100%;
 }
 
-.main {
-    height: 100vh;
+.react-tabs {
+    &__tab {
+        font-size: var(--fs-300);
+        font-family: var(--ff-primary);
+        letter-spacing: 0.05em;
+    }
+}
+
+.suspense {
+    &__loader {
+        text-align: center;
+    }
 }
