--- a/src/components/randomAdviceLazyComponent/randomAdviceLazyComponent.scss
+++ b/src/components/randomAdviceLazyComponent/randomAdviceLazyComponent.scss
@@ -1,5 +1,3 @@
 .random-advice {
-    margin: 0 10px;
-    position: relative;
-    width: max-content;
+    text-align: center;
 }
